--- a/page1.html
+++ b/page1.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>page1</h2>
+    <h2>test.html</h2>
+    <h2>git pull จาก html</h2>
 </body>
 </html>
