--- a/page3.html
+++ b/page3.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ไอเหี้ยโอม</title>
+    <title>Tarr</title>
 </head>
 <body>
-    <h1>ควยโอม</h1>
+    <h1>Tar</h1>
 </body>
 </html>
